Allow users to navigate back from consent screen

--- a/src/Umbraco.Web.UI.Client/src/installer/steps/metricsconsent.html
+++ b/src/Umbraco.Web.UI.Client/src/installer/steps/metricsconsent.html
@@ -14,6 +14,8 @@
     <div class="control-group">
       <div class="controls">
         <input type="submit" value="Install" class="btn btn-success" />
+
+        <button class="btn btn-info" ng-click="goBack()">Go Back</button>
       </div>
     </div>
   </form>
